--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             ordinateur portable. Lorsqu'il a fini ses études, on m'a acheté mon propre ordinateur portable. C'est alors que 
             j'ai commencé à m'intéresser à l'informatique, plus précisément au développement de sites web et 
             d'applications mobiles. Cependant, il était un peu tard pour changer de domaine d'études. Je me 
-            contentais de creer des <a href="https://asedadankwah.wordpress.com/" title="un de mes blogs">blogs</a> pour moi et pour certains camarades a moi avec Wordpress.
+            contentais de creer des <a href="https://asedadankwah.wordpress.com/" title="un de mes blogs">blogs</a> pour moi et pour certains camarades à moi avec Wordpress.
         </p><br>
     </article>
     <article class="black">
