--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             je n'avais pas le droit de regarder la télévision ni de posséder une quelconque technologie. 
             J'ai eu mon premier Iphone à l'âge de 17 ans, alors que je me préparais à entrer à l'université. 
             L'Iphone et ses applications mobiles m'ont beaucoup fascinées, mais personne dans mon entourage ne 
-            s'intéressait a l'informatique, et ne pouvait me donner trop d'informations sur ce dernier.               
+            s'intéressait a l'informatique, et ne pouvait me donner assez d'informations sur ce dernier.               
         </p><br>
     </article>
     <article class="black">
