--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     <article class="black">
         <p>
             J'aimerais dire que j'ai toujours eu une passion pour les ordinateurs depuis toute petite.
-            Malheureusement, ce n'était pas le cas. Ayant grandi dans une famille très stricte et religieuse, 
+            Malheureusement, ce n'était pas le cas. Ayant grandi dans une famille très stricte et protectrice, 
             je n'avais pas le droit de regarder la télévision ni de posséder une quelconque technologie. 
             J'ai eu mon premier Iphone à l'âge de 17 ans, alors que je me préparais à entrer à l'université. 
             L'Iphone et ses applications mobiles m'ont beaucoup fascinées, mais personne dans mon entourage ne 
