--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     </header>
 <section class="banner" id="banner">
     <div class="content">
-        <h2>Bienvenue dans mon Portfolio</h2>
-        <p>Conceptrice Web ǀ Graphiste</p>
+        <h2>Bienvenue sur mon Portfolio</h2>
+        <p>J’ai fait ce portfolio pour y regrouper mes projets, mon CV, et mon histoire. Je vous invite à prendre le temps de regarder chaque page et d’en apprécier son contenu. Bonne découverte !</p>
     </div>
 </section>
 
