--- a/index4.html
+++ b/index4.html
@@ -3,5 +3,7 @@
     <img src="images/logos/Bulb Photoshop.png" alt="Card image" style="width:100%">
     <img src="images/logos/AppleAkua.png" alt="Card image" style="width:100%">
     <img src="images/logos/Bayern.png" alt="Card image" style="width:100%">
-    <img src="images/logos/TV3.png" alt="Card image" style="width:100%">  
+    <img src="images/logos/TV3.png" alt="Card image" style="width:100%">
+    <img src="images/logos/dti logo.png" alt="Card image" style="width:100%">
+    <img src="images/logos/Flyer.png" alt="Card image" style="width:100%">
 </div>
