--- a/index4.html
+++ b/index4.html
@@ -1,9 +1,38 @@
-<div>
-    <img src="images/logos/Medcine bottle.png" alt="Card image" style="width:100%">
-    <img src="images/logos/Bulb Photoshop.png" alt="Card image" style="width:100%">
-    <img src="images/logos/AppleAkua.png" alt="Card image" style="width:100%">
-    <img src="images/logos/Bayern.png" alt="Card image" style="width:100%">
-    <img src="images/logos/TV3.png" alt="Card image" style="width:100%">
-    <img src="images/logos/dti logo.png" alt="Card image" style="width:100%">
-    <img src="images/logos/Flyer.png" alt="Card image" style="width:100%">
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>    
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Graphisme Par Moi</title>
+    <link rel="stylesheet" href="style4.css">
+</head>
+<body>
+    <div class="row">
+        <div class="column">
+          <img src="images/logos/Medcine bottle.png" alt="Card image" style="width:100%">
+        </div>
+        <div class="column">
+          <img src="images/logos/Bulb Photoshop.png" alt="Card image" style="width:100%">
+        </div>
+        <div class="column">
+          <img src="images/logos/AppleAkua.png" alt="Card image" style="width:100%">
+        </div>
+        <div class="column">
+            <img src="images/logos/Bayern.png" alt="Card image" style="width:100%">
+        </div>
+        <div class="column">
+            <img src="images/logos/TV3.png" alt="Card image" style="width:100%">
+        </div>
+        <div class="column">
+            <img src="images/logos/dti logo.png" alt="Card image" style="width:100%">
+        </div>
+        <div class="column">
+            <img src="images/logos/Flyer.png" alt="Card image" style="width:100%">
+        </div>       
+        <div class="column">
+            <img src="images/logos/DI PROGRAM.png" alt="Card image" style="width:100%">
+        </div>
+    </div>
+</body>    
+</html>
