--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <section class="banner" id="banner">
     <div class="content">
         <h2>Bienvenue sur mon Portfolio</h2>
-        <p>J’ai fait ce portfolio pour y regrouper mes projets, mon CV, et mon histoire. Je vous invite à prendre le temps de regarder chaque page et d’en apprécier son contenu. Bonne découverte !</p>
+        <p>J’ai créé ce portfolio pour y regrouper mes projets, mon CV, et mon histoire. Je vous invite à prendre le temps de regarder chaque page et d’en apprécier son contenu. Bonne découverte !</p>
     </div>
 </section>
 
