--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     <article class="black">
         <p>
             Lors de ma première année de licence, mon grand frère était en troisième année, et nous partagions le même
-            ordinateur portable. Lorsqu'il a fini ses études, on m'a acheté mon propre ordinateur portable. C'est alors que 
+            ordinateur portable. Lorsqu'il a fini ses études, on m'a achetée mon propre ordinateur portable. C'est alors que 
             j'ai commencé à m'intéresser à l'informatique, plus précisément au développement de sites web et 
             d'applications mobiles. Cependant, il était un peu tard pour changer de domaine d'études. Je me 
             contentais de creer des <a href="https://asedadankwah.wordpress.com/" title="un de mes blogs">blogs</a> pour moi et pour certains camarades à moi avec Wordpress.
