--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="col50">
             <h2 class="titleText"><span>À</span> Propos de Moi</h2>
             <p>Je suis à la recherche du master dans votre établissement réputé qui m'aidera à acquérir les 
-                connaissances et les compétences pratiques nécessaires afin de devenir Conceptrice Web.
+                connaissances et les compétences pratiques nécessaires afin de devenir Conceptrice Web/Développeuse Web.
                 Je suis convaincue que ce programme de master dans une université avec une réputation comme la vôtre
                 m'ouvrira des opportunités car les diplômes en informatique sont très appréciés au niveau international.<br> <br>
                  Mon objectif de carrière à court terme est d'acquérir une expérience professionnelle pratique en 
